# hargyllcms

./: .gitignore  Makefile.am  Readme.txt  autogen.sh  configure.ac  legal.sh  log.txt
cgats/: pars.h
contrib/: argyllcms.spec
doc/: ArgyllDoc.html  ChangesSummary.html  FWA.html  Installing_Linux.html  Installing_MSWindows.html  Makefile.am  Scenarios.html  applycal.html  cctiff.html  chartread.html  collink.html  colprof.html  dispcal.html  dispread.html  dispwin.html  instruments.html  mpplu.html  printcal.html  printtarg.html  scanin.html  specplot.html  spotread.html  targen.html  ti3_format.html  tiffgamut.html  xicclu.html
gamut/: gammap.c  gammap.h  gamut.c  maptest.c  nearsmth.c  nearsmth.h  viewgam.c
h/: config.h
icc/: .gitignore  Makefile.am  icc.c  icc.h
imdi/: cctiff.c
lib/: Makefile.am
libusb/: 55-Argyll.rules  Makefile.am
link/: collink.c
plot/: plot.c
profile/: colprof.c  logo2cgats.c  printcal.c  prof.h  profin.c  profout.c  sepgen.c
ref/: Makefile.am  strange.cal
render/: render.c  render.h  timage.c
rspl/: rev.c  rev.h  rspl.c  rspl.h
scanin/: scanin.c  scanrd.c
spectro/: Makefile.am  chartread.c  conv.c  conv.h  dispcal.c  dispread.c  dispsup.c  dispsup.h  dispwin.c  dtp20.c  dtp22.c  dtp41.c  i1pro_imp.c  i1pro_imp.h  inst.h  munki_imp.c  ntio.c  spec2cie.c  spotread.c  spyd2.c  spyd2en.c  spyd2setup.h  ss.c  strange.cal  unixio.c  usbio.c
tools/: .gitignore  Makefile.am
tweak/: refine.c
xicc/: Makefile.am  cam02.c  cam02.h  cam02ref.h  cam02test.c  cam97s3.h  cam97test.c  cvtest.c  fakeCMY.c  iccgamut.c  moncurve.c  mpp.c  revfix.c  tiffgamut.c  xcal.c  xcal.h  xcam.c  xcam.h  xfbview.c  xfit.c  xicc.c  xicc.h  xicclu.c  xlut.c  xmatrix.c  xmono.c  xspect.c  xspect.h
