## Process this file with automake to produce Makefile.in

SUBDIRS =						\
	lib						\
	cgats						\
	doc						\
	gamut						\
	h						\
	icc						\
	libusb						\
	link						\
	numlib						\
	plot						\
	profile						\
	ref						\
	render						\
	rspl						\
	scanin						\
	spectro						\
	target						\
	tweak						\
	xicc						\
	tools

snapshot:
	$(MAKE) dist distdir=$(PACKAGE)-$(VERSION)-`date +"%Y%m%d"`

EXTRA_DIST = Readme.txt ttbd.txt log.txt legal.sh
