## Process this file with automake to produce Makefile.in

docdir = $(datadir)/doc/argyll

doc_DATA =						\
	applycal.html					\
	ArgyllDoc.html					\
	average.html					\
	cal_format.html					\
	calvschar.html					\
	cb2cgats.html					\
	cctiff.html					\
	ChangesSummary.html				\
	chartread.html					\
	chroma4.jpg					\
	cht_format.html					\
	CMP_Digital_Target-3.jpg			\
	CMP_DT_003.jpg					\
	collink.html					\
	colorchecker.jpg				\
	ColorMunkiCreate.jpg				\
	ColorMunki.jpg					\
	colprof.html					\
	Compiling.html					\
	CRTspectrum.jpg					\
	CrushedDisplyBlacks.html			\
	cube.jpg					\
	DC.jpg						\
	dispcal.html					\
	dispprofloc.html				\
	dispread.html					\
	dispwin.html					\
	DocLicense.txt					\
	DTP20.jpg					\
	DTP22.jpg					\
	DTP41.jpg					\
	DTP51.jpg					\
	DTP92.jpg					\
	DTP94.jpg					\
	extracticc.html					\
	extractttag.html				\
	fakeCMY.html					\
	fakeread.html					\
	File_Formats.html				\
	filmread.html					\
	filmtarg.html					\
	Fluorescent.jpg					\
	FWA.html					\
	FWA_measure.jpg					\
	gamma.html					\
	gamutmapping1.jpg				\
	greytiff.html					\
	HCFR.jpg					\
	HCT.jpg						\
	Huey.jpg					\
	i1d.jpg						\
	i1m.jpg						\
	i1p.jpg						\
	i1scan14.jpg					\
	iccdump.html					\
	iccgamut.html					\
	iccgamutmapping.html				\
	icclu.html					\
	Installing.html					\
	Installing_Linux.html				\
	Installing_MSWindows.html			\
	Installing_OSX.html				\
	instruments.html				\
	invprofcheck.html				\
	Kgraph1.jpg					\
	Kgraph2.jpg					\
	Kgraph3.jpg					\
	Kgraph4.jpg					\
	Kgraph5.jpg					\
	Kgraph6.jpg					\
	Kgraph7.jpg					\
	Kgraph8.jpg					\
	Kparams.jpg					\
	kodak2cgats.html				\
	LabSteps.jpg					\
	License2.txt					\
	License3.txt					\
	License.txt					\
	Limitations.html				\
	logo2cgats.html					\
	LSDC.jpg					\
	MinorUtilities.html				\
	monitorcontrols.html				\
	mox.jpg						\
	moxxr.jpg					\
	mppcheck.html					\
	mpplu.html					\
	mpprof.html					\
	Organisation.html				\
	Overview.html					\
	Performance.html				\
	printcal.html					\
	printtarg.html					\
	profcheck.html					\
	Q60.jpg						\
	ReadMe.txt					\
	refine.html					\
	revfix.html					\
	scanin.html					\
	specplot.html					\
	Scenarios.html					\
	sepgen.html					\
	SG.jpg						\
	sl.jpg						\
	Source.html					\
	spec2cie.html					\
	splitcgats.html					\
	spotread.html					\
	spyd2en.html					\
	Spyd2.jpg					\
	Spyd3.jpg					\
	Spyd3x.jpg					\
	srgbplot.gif					\
	ss.jpg						\
	surface.jpg					\
	synthcal.html					\
	synthread.html					\
	targen.html					\
	ti3_format.html					\
	tiffgamut.html					\
	timage.html					\
	ucmm.html					\
	verify.html					\
	viewgam.html					\
	xicclu.html

EXTRA_DIST =							\
	$(doc_DATA)

