## Process this file with automake to produce Makefile.in

refdir = $(datadir)/color/argyll

ref_DATA =						\
	3dap5k.sp					\
	CIE_C.sp					\
	ClayRGB1998.icm					\
	CMP_DT_003.cht					\
	ColorChecker.cht				\
	ColorCheckerDC.cht				\
	ColorCheckerSG.cht				\
	ColorChecker.ti2				\
	D50_0.0.sp					\
	D50_0.3.sp					\
	D50_0.5.sp					\
	D50_0.7.sp					\
	D50_1.0.sp					\
	D50_1.2.sp					\
	D50_1.5.sp					\
	D50_1.7.sp					\
	D50_2.0.sp					\
	D50_2.5.sp					\
	D50_3.0.sp					\
	ECI2002R.ti2					\
	example121.sp					\
	example.sp					\
	FograStrip.ti1					\
	FograStrip.ti2					\
	GTIPlus.sp					\
	Hutchcolor.cht					\
	i1_RGB_Scan_1.4.cht				\
	i1_RGB_Scan_1.4.ti2				\
	it8.cht						\
	lab2lab.icm					\
	Makefile.am					\
	Office.sp					\
	QPcard_201.cht					\
	SOtele.sp					\
	sRGB.icm					\
	strange.cal					\
	TruluxPlus.sp					\
	Trulux.sp

EXTRA_DIST =						\
	$(ref_DATA)

